# cloth-application

./: .dockerignore  README.md  compose.dev.yml  dev.Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  prod.Dockerfile
actions/: projects.ts  user-settings.ts
app/: layout.tsx  page.tsx
app/(user)/: layout.tsx
clothes-app/: .gitignore  docker-compose.dev.yml  entrypoint.sh  package-lock.json  package.json  tmp.csv
clothes-app/actions/: image.ts
clothes-app/app/: globals.css  layout.tsx  page.tsx  test_excel.tsx
clothes-app/components/: CIEDisk.tsx  CIESphere.tsx  DesignContextProvider.tsx  ExcelButton.tsx  ImageUploader.tsx  PatternPreview.tsx  SettingSlider.tsx  WovenFabric.tsx  WovenTextureViewer.tsx  color_handling.tsx  find_colors.tsx  import-button.tsx  login-form.tsx  signup-form.tsx
clothes-app/docker/: dev.Dockerfile
clothes-app/lib/: generateNormalMap.ts  generateWovenHeightMap.ts
clothes-app/prisma/: schema.prisma
components/: app-sidebar.tsx  nav-steps.tsx  nav-user.tsx
context/: ProjectContext.tsx  SettingsContext.tsx
i18n/: request.ts
lib/: auth.ts
messages/: en.json  fr.json
pbr_rendering/: Cargo.toml
pbr_rendering/src/: lib.rs  main.rs
pbr_texture_generation/: Cargo.toml  comparison.blend
pbr_texture_generation/src/: drawable.rs  line.rs  main.rs  texture.rs  wire.rs
prisma/: schema.prisma
public/: basic_wif.wif  hearts3.wif  rosepath1.wif
rapport/: main.typ
simu rémy/: .prettierrc  main.css  main.html  main.js
tests/: extender.py  extender2.py  test.py  tmp.csv
utils/: parseWIF.ts
(+52 files in other folders)
