[package]
name = "pbr_rendering"
version = "0.1.0"
edition = "2024"

[dependencies]
cfg-if = "1"
env_logger = "0.11.8"
log = "0.4.27"
pollster = "0.4.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-web = "0.1.3"
wgpu = "25.0.2"
winit = "0.30.11"

[lib]
crate-type = ["cdylib", "rlib"]

# This should go in the Cargo.toml in the root directory
[profile.release]
strip = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "25.0", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-C", "link-arg=--ld-path=/usr/bin/mold"]
