[package]
name = "pbr_texture_generation"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25.6", features = ["rayon"] }
indicatif = { version = "0.17.11", features = ["rayon"] }
itertools = "0.14.0"
nalgebra = "0.33.2"
noise = "0.9.0"
num-complex = "0.4.6"
rand = "0.9.1"
rayon = "1.10.0"
